# PyGraf

./: .gitignore  Makefile  Pipfile  README.md  db_3.py  graf.py  main.py  mainwindow.ui  pyproject.toml  requirements.txt  ui.py
.github/workflows/: build.yml
pygraf/: db_3.py  main.py  mainwindow.ui  ui.py
