[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraf"
version = "0.1.0"
description = "A quick and dirty program that generates bar graphs"
authors = [
    {name = "Filip", email = "your-email@example.com"},
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

[tool.uv]
dev-dependencies = []

[tool.setuptools]
packages = ["pygraf"]