[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraf"
version = "0.1.0"
description = "A quick and dirty program that generates bar graphs"
authors = [{ name = "Filip", email = "your-email@example.com" }]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
  "altgraph==0.17.4",
  "contourpy==1.3.1",
  "cycler==0.12.1",
  "fonttools==4.55.0",
  "kiwisolver==1.4.7",
  "matplotlib==3.9.2",
  "numpy==2.1.3",
  "packaging==24.2",
  "pillow==11.0.0",
  "pyinstaller==6.11.1",
  "pyinstaller-hooks-contrib==2024.10",
  "pyparsing==3.2.0",
  "PyQt6==6.7.1",
  "PyQt6-Qt6==6.7.3",
  "PyQt6_sip==13.8.0",
  "python-dateutil==2.9.0.post0",
  "setuptools==75.6.0",
  "six==1.16.0",
]

[tool.uv]

[tool.setuptools]
packages = ["pygraf"]

